// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExternalLink should match with ExternalLink component 1`] = `
<div>
  <a
    class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 text-info hover:text-info-hover text-sm"
    href="https://qovery.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    My external link
    <i
      aria-hidden="true"
      class="fa-regular fa-arrow-up-right-from-square text-xs leading-5"
    />
  </a>
</div>
`;

exports[`Link should match with Link component 1`] = `
<div>
  <a
    class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 text-info hover:text-info-hover text-sm"
    to="/"
  >
    My link
  </a>
</div>
`;
